force-app/main/default/objects/B2C_feedback__c/B2C_feedback__c.object-meta.xml
<CustomObject>
    <description>This object was created to capture feedback from students for B2C Coaching sessions.</description>
    <label>B2C feedback</label>
    <nameField>
        <displayFormat>Feedback-{0}</displayFormat>
        <label>B2C Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2C feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>