force-app/main/default/objects/B2C_feedback__c/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The coach that ran the session this feedback is related to</description>
    <inlineHelpText>The coach that ran the session this feedback is related to</inlineHelpText>
    <label>Coach</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>B2C feedbacks</relationshipLabel>
    <relationshipName>B2C_feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>