force-app/main/default/objects/B2C_feedback__c/fields/Feedback_Comment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comment__c</fullName>
    <label>Feedback Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>