force-app/main/default/objects/B2C_feedback__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>B2C feedbacks</relationshipLabel>
    <relationshipName>B2C_feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>