force-app/main/default/objects/B2C_feedback__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>Date of the session this feedback is related to</description>
    <inlineHelpText>Date of the session this feedback is related to</inlineHelpText>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>