force-app/main/default/objects/B2C_feedback__c/fields/Session_Mode__c.field-meta.xml
<CustomField>
    <fullName>Session_Mode__c</fullName>
    <label>Session Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>